# lithography-tradeoff-optimizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: CNAME  app.js  index.html  styles.css
infra/: prometheus.yml
lto/: __init__.py  schemas.py
lto/alerts/: engine.py
lto/alerts/channels/: __init__.py  slack.py
lto/api/: __init__.py  deps.py  main.py
lto/api/routers/: health.py  jobs.py  tradeoffs.py
lto/dashboard/: __init__.py  app.py
lto/frontend/static/: app.js  index.html  styles.css
lto/ml/: __init__.py  engine.py  ensemble.py  train.py
lto/ml/drift/: __init__.py  detector.py
lto/ml/features/: engineering.py
lto/ml/models/: gp_model.py  mlp_model.py  xgboost_model.py
lto/ml/uncertainty/: __init__.py  quantifier.py
lto/orchestration/: __init__.py
lto/orchestration/flows/: __init__.py  job_pipeline.py
lto/simulator/: __init__.py  base.py  synthetic.py
lto/simulator/models/: __init__.py  optical.py  process.py  resist.py
lto/storage/: __init__.py  database.py  models.py  repository.py
markdownfiles/: ARCHITECTURE.md  README.md  lithography-tradeoff-optimizer.md
tests/ml/: test_pipeline.py
tests/simulator/: __init__.py  test_optical.py  test_synthetic.py
