[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lto"
version = "0.1.0"
description = "Lithography Tradeoff Optimizer — Tradeoff observability platform for computational lithography"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"

dependencies = [
    # Core
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pydantic>=2.5",

    # ML
    "torch>=2.1",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "shap>=0.43",
    "optuna>=3.4",
    "mlflow>=2.8",
    "joblib>=1.3",

    # Orchestration
    "prefect>=3.0",

    # API
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "redis>=5.0",

    # Storage
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.88",
    "httpx>=0.25",
    "ruff>=0.1",
]
dashboard = [
    "streamlit>=1.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
